--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
 
 body{
-  font-family: "Robot Condensed" sans-serif;
+  font-family: "Roboto Condensed", sans-serif !important;
   width: 100%;
   height: 100%;
 }
@@ -81,7 +81,6 @@ nav ul li {
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-family: "Robot Condensed" sans-serif;
   z-index: 1;
 }
 
@@ -143,5 +142,31 @@ nav ul li {
 .navbar-brand{
   width: 7rem !important;
 }
+}
 
+p {
+  padding-top: 1px;
+}
+
+.profile-img{
+  width: 16rem;
+border-radius: 50%;
+paddingg: .3rem;
+border: 1px solid var(--primary-orange)
+}
+
+.heading {
+  color: var(--primary-orange);
+  text-transform: uppercase;
+}
+
+@media(max-width: 468px){
+  .profile-img{
+    width: 10rem;
+  }
+}
+
+.photo-wrap{
+  display: block;
+  text-align: center;
 }
