--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,10 @@ body{
 :root {
   --primary-white: #fff;
   --primary-orange: #f9ab00;
-  --primary-dark: rgba(255,255,255,0);
+  --primary-dark: rgba(52,58,64,0);
   --primary-red: #ef4035;
   --primary-hover-red: #f33501;
+  --primary-light-grey:  #f4f4f4;
 }
 
 /* ********************************************** NAVBAR ****************************************************** */
@@ -144,6 +145,8 @@ nav ul li {
 }
 }
 
+/* ********************************************** ABOUT ME ****************************************************** */
+
 p {
   padding-top: 1px;
 }
@@ -170,3 +173,63 @@ border: 1px solid var(--primary-orange)
   display: block;
   text-align: center;
 }
+
+/* ********************************************** SERVICES ****************************************************** */
+
+.services{
+  text-align: center;
+  padding-bottom: 2rem;
+  background: var(--primary-light-grey);
+}
+
+.services h1{
+  color: black;
+  text-transform: uppercase;
+}
+
+.services .circle{
+position: relative;
+margin: 0.375rem auto;
+width: 3.125rem;
+height: 3.125rem;
+background: var(--primary-orange);
+border-radius: 50%;
+}
+
+.services .icons{
+  font-size: 1.4rem;
+  color: white;
+  position: absolute;
+
+top: 50%;
+left:50%;
+transform: translate(-50%, -50%);}
+
+.services .box
+{
+  height: 19rem;
+  border-bottom: 0.3125rem solid var(--primary-orange);
+  padding: 0.75rem;
+  margin-bottom: 1.875rem;
+  background: var(--primary-white);
+}
+
+
+.services .box:hover
+{
+  background: #FFD580;
+  border-bottom: 0.3125rem solid black;
+
+}
+
+.services .box:hover .icons{
+  color: black;
+
+}
+
+
+.services .box:hover .circle{
+  background: white;
+  
+}
+
