--- a/src/App.css
+++ b/src/App.css
@@ -207,7 +207,7 @@ transform: translate(-50%, -50%);}
 
 .services .box
 {
-  height: 19rem;
+  height: 19.5rem;
   border-bottom: 0.3125rem solid var(--primary-orange);
   padding: 0.75rem;
   margin-bottom: 1.875rem;
@@ -227,9 +227,79 @@ transform: translate(-50%, -50%);}
 
 }
 
-
 .services .box:hover .circle{
   background: white;
-  
 }
 
+.experience-wrapper{
+  position: relative;
+  padding: 3.125rem 0;
+  overflow: hidden;
+}
+
+.experience h1{
+  text-transform: uppercase;
+  color: var(--primary-orange);
+}
+
+.experience-wrapper::before{
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 50%;
+  margin-left: -0.0625rem;
+  width: 0.125rem;
+  height: 100%;
+background: grey;
+z-index: 1;}
+
+.timeline-block{
+  width: calc(50% + 0.5rem);
+  display: flex;
+  justify-content: space-between;
+  clear: both;
+}
+
+.time-line-block-right {
+  float: right;
+}
+
+.time-line-block-left {
+  float: left;
+  direction: rtl;
+}
+
+.marker {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  border: 0.3125rem solid darkgray;
+  background: var(--primary-orange);
+  margin-top: 0.625rem;
+  z-index: 3;
+}
+
+.timeline-content{
+  width: 95%;
+  padding: 0 0.9375rem;
+  color: var(--primary-dark-grey);
+  direction: ltr;
+}
+
+.timeline-content h3{
+  margin-top: 0.3125;
+  color: #ff6961;
+  font-weight: 800;
+
+}
+/*
+@media(max-width: 768px)
+{
+  .experience-wrapper: :before{
+    left: 0.5rem;
+    margin-bottom: 1.875rem;
+  }
+  .time-line-block-right{
+    float: none;
+  }
+}*/
