--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
 
-body{
+
+body{margin: 0;
   font-family: "Roboto Condensed", sans-serif !important;
   width: 100%;
   height: 100%;
@@ -212,6 +213,7 @@ transform: translate(-50%, -50%);}
   padding: 0.75rem;
   margin-bottom: 1.875rem;
   background: var(--primary-white);
+  transition: 0.3s ease-in-out;
 }
 
 
@@ -302,4 +304,82 @@ z-index: 1;}
   .time-line-block-right{
     float: none;
   }
+}*/
+
+
+.portfolio{
+  text-align: center;
+  padding-bottom: 2rem;
+  background: var(--primary-light-grey);
+}
+
+.portfolio h1{
+  color: black;
+  text-transform: uppercase;
+}
+
+
+.services .icons{
+  font-size: 1.4rem;
+  color: white;
+  position: absolute;
+
+top: 50%;
+left:50%;
+transform: translate(-50%, -50%);}
+
+.portfolio .box
+{
+  width: 17rem;
+  color: white;
+  height: 18rem;
+  border-bottom: 0.3125rem solid var(--primary-orange);
+  padding: 0.75rem;
+  margin-bottom: 1.875rem;
+  background: #404040;
+  transition: 0.3s ease-in-out;
+  overflow: hidden;
+}
+
+
+.portfolio .box:hover
+{color: white;
+  border-bottom: 0.3125rem solid black;
+
+}
+
+
+.portfolio-image{
+  width: 85%;
+  height: 90%;
+  padding-top: 2.5%;
+  padding-bottom: 2.5%;
+    padding-left: 2.5%;
+  padding-right: 2.5%;
+
+}
+
+
+
+.portfolio .box:hover
+{
+    transform: scale(1.2);
+
+}
+
+
+/*@media(max-width: 768px)
+{
+.portfolio-image{
+  width: 12rem;
+  padding: 0.3rem;
+}
+}
+
+/*@media(max-width: 1024px)
+{
+.portfolio-image{
+  width: 15rem;
+  padding: 0.3rem;
+}
 }*/
