--- a/src/App.css
+++ b/src/App.css
@@ -160,8 +160,13 @@ border: 1px solid var(--primary-orange)
 }
 
 .heading {
-  color: var(--primary-orange);
+  color:black;
+  padding-bottom: 10px ;
+  border-bottom-style: solid;
+  border-color: var(--primary-orange);
   text-transform: uppercase;
+  border-bottom-width: 3.1px;
+  width: fit-content;
 }
 
 @media(max-width: 468px){
@@ -184,7 +189,7 @@ border: 1px solid var(--primary-orange)
 }
 
 .services h1{
-  color: black;
+  color: var(--primary-orange);
   text-transform: uppercase;
 }
 
@@ -241,7 +246,7 @@ transform: translate(-50%, -50%);}
 
 .experience h1{
   text-transform: uppercase;
-  color: var(--primary-orange);
+  color: black;
 }
 
 .experience-wrapper::before{
@@ -311,10 +316,12 @@ z-index: 1;}
   text-align: center;
   padding-bottom: 2rem;
   background: var(--primary-light-grey);
+  height: 40rem;
 }
 
 .portfolio h1{
-  color: black;
+  padding-bottom: 10%;
+  color: var(--primary-orange);
   text-transform: uppercase;
 }
 
@@ -368,18 +375,68 @@ transform: translate(-50%, -50%);}
 }
 
 
-/*@media(max-width: 768px)
-{
-.portfolio-image{
-  width: 12rem;
-  padding: 0.3rem;
-}
+/***************************** TESTIMONIALIS **************************************/
+
+.testimonials  {
+background: url(https://i.pinimg.com/originals/6c/7d/70/6c7d70de58d7c1aa760e2a004ae67c89.jpg);
+background-size: cover;
+background-color: black;
+text-align: center;
+padding-bottom: 4rem;
+margin-bottom: 0;
+width: 100%;
 }
 
-/*@media(max-width: 1024px)
-{
-.portfolio-image{
-  width: 15rem;
-  padding: 0.3rem;
+.testimonials h1{
+  color: black;
+  padding: 3rem 0;
+  text-transform: uppercase;
 }
-}*/
+
+
+.myCarousel{
+  color: white;
+  background: transparent;
+  margin-top: -6%;
+  width: 54%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 6%;
+  padding-bottom: 8%;
+  padding-left: 5%;
+  padding-right: 5%;
+  height: 12rem;
+
+}
+.testimonials-content{
+  text-align: center;
+  max-width: 53.125rem;
+  margin: 0 auto 2rem auto;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.carousel .slide img{
+  width: 10rem !important;
+  border-radius: 50%;
+  padding-bottom: 1rem;
+}
+
+.myCarousel h3{
+  color: black;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+
+.carousel .slide {
+background: transparent !important;
+height: 100% !important;
+padding-top: 3rem;
+padding-bottom: 3rem;
+}
+
+.carousel-root{
+  margin: auto !important;
+  margin-top: 3% !important;
+
+}
