--- a/src/App.css
+++ b/src/App.css
@@ -299,24 +299,14 @@ z-index: 1;}
   font-weight: 800;
 
 }
-/*
-@media(max-width: 768px)
-{
-  .experience-wrapper: :before{
-    left: 0.5rem;
-    margin-bottom: 1.875rem;
-  }
-  .time-line-block-right{
-    float: none;
-  }
-}*/
 
 
 .portfolio{
+  display: block;
   text-align: center;
   padding-bottom: 2rem;
   background: var(--primary-light-grey);
-  height: 40rem;
+
 }
 
 .portfolio h1{
@@ -326,14 +316,6 @@ z-index: 1;}
 }
 
 
-.services .icons{
-  font-size: 1.4rem;
-  color: white;
-  position: absolute;
-
-top: 50%;
-left:50%;
-transform: translate(-50%, -50%);}
 
 .portfolio .box
 {
@@ -366,6 +348,13 @@ transform: translate(-50%, -50%);}
 
 }
 
+
+@media(max-width: 768px)
+{
+.portfolio .box{
+  max-width: 70%;
+}
+}
 
 
 .portfolio .box:hover
@@ -439,4 +428,105 @@ padding-bottom: 3rem;
   margin: auto !important;
   margin-top: 3% !important;
 
+}
+
+/***************************** CONTACT ME **************************************/
+
+.contacts{
+  background:rgb(53,56,57);
+  padding-bottom: 3rem ;
+
+}
+
+.contacts h1{
+  color:  var(--primary-orange);
+  padding: 1.3rem;
+  text-transform: uppercase;
+}
+
+.contacts p{
+  color: darkgray;
+  font-size: 1.2rem;
+}
+
+/***************************** INPUTS **************************************/
+
+.contacts input, .contacts textarea {
+  width: 100%;
+  box-sizing: border-box;
+  background: none;
+  resize: none;
+  border: 0;
+  border-bottom: 0.125rem solid grey;
+  border-radius: 0;
+  color: var(--primary-orange);
+  outline: 0 !important;
+  box-shadow: none !important;
+  top: 0;
+  margin-bottom: 1rem;
+  padding-left: 0 !important;
+}
+
+.contacts textarea{
+  padding-bottom: 2rem;
+}
+
+.contacts .container{
+  padding: 4rem 0;
+}
+
+.contacts input:focus, .contacts textarea:focus{
+  background: transparent;
+  color: var(--primary-orange);
+  border-bottom: 0.125rem solid darkgray;
+}
+
+.contacts textarea{
+  height: 12.2rem !important;
+
+}
+
+.contact-btn{
+  width: 100%;
+  background: transparent;
+  margin: 1rem 0 0 0;
+}
+
+@media(max-width: 768px){
+  .contacts{
+    overflow-x: hidden;
+  }
+  .contacts .container{
+    padding: 0 1rem;
+  }
+  .contacts p{
+    padding: 0 0.4rem;
+  }
+}
+
+.line{
+  position: relative;
+  top: -0.8rem;
+  width: 0;
+  height: 0.125rem;
+  background: var(--primary-orange);
+  display: inline-block;
+}
+
+input:focus+.line, textare:focus+.line{
+  width: 100%;
+  transition: width 0.5s ease-in-out;
+}
+
+input.form-control{
+  margin: -0.3rem 0;
+}
+
+textarea.form-control{
+  margin: -0.3rem 0;
+}
+
+textarea:focus+.line, textare:focus+.line{
+  width: 100%;
+  transition: width 0.5s ease-in-out;
 }
